# intelligent_doc_qa

./: app.py  config.py  preprocess.py  pyproject.toml  qa_chain.py
embeddings_db/92954f28-1d52-4083-9f5f-fc2f74aa1057/: index_metadata.pickle
prompts/: qa_prompt.jinja2
