[tool.poetry]
name = "intelligent-doc-qa"
version = "0.1.0"
description = ""
authors = ["Jefest1 <anyanf101@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.41.1"
pypdf2 = "^3.0.1"
langchain = "^0.3.16"
langchain-openai = "^0.3.2"
langchain-community = "^0.3.16"
pydantic = "^2.10.6"
pydantic-settings = "^2.7.1"
langchain-anthropic = "^0.3.4"
pypdf = "^5.2.0"
docarray = "^0.40.0"
chromadb = "^0.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
